--- a/MSR/Monthly-Security-Report-Book_toc.jrxml
+++ b/MSR/Monthly-Security-Report-Book_toc.jrxml
@@ -73,7 +73,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{pageIndex} == 1]]></printWhenExpression>
 			<staticText>
-				<reportElement style="TOC-Title-Table-Of-Content" x="0" y="20" width="455" height="22" forecolor="#00B0F0" uuid="1a3c5d23-107c-431a-926c-6cdcceb4128d"/>
+				<reportElement style="TOC-Title-Table-Of-Content" x="0" y="20" width="455" height="22" forecolor="#0097DB" uuid="1a3c5d23-107c-431a-926c-6cdcceb4128d"/>
 				<text><![CDATA[Table of Contents]]></text>
 			</staticText>
 		</band>
